@@ -575,3 +575,281 @@ PyTypeObject PinkNoiseType = {
     PinkNoise_new,                 /* tp_new */
 };
 
+typedef struct {
+    pyo_audio_HEAD
+    int modebuffer[2];
+    MYFLT y1;
+    MYFLT c1;
+    MYFLT c2;
+} BrownNoise;
+
+static void
+BrownNoise_generate(BrownNoise *self) {
+    MYFLT rnd, val;
+    int i;
+    
+    for (i=0; i<self->bufsize; i++) {
+        rnd = rand()/((MYFLT)(RAND_MAX)+1)*1.98-0.99;
+        val = self->c1 * rnd + self->c2 * self->y1;
+        self->y1 = val;
+        self->data[i] = val * 20.0; /* gain compensation */
+    }
+}
+
+static void BrownNoise_postprocessing_ii(BrownNoise *self) { POST_PROCESSING_II };
+static void BrownNoise_postprocessing_ai(BrownNoise *self) { POST_PROCESSING_AI };
+static void BrownNoise_postprocessing_ia(BrownNoise *self) { POST_PROCESSING_IA };
+static void BrownNoise_postprocessing_aa(BrownNoise *self) { POST_PROCESSING_AA };
+static void BrownNoise_postprocessing_ireva(BrownNoise *self) { POST_PROCESSING_IREVA };
+static void BrownNoise_postprocessing_areva(BrownNoise *self) { POST_PROCESSING_AREVA };
+static void BrownNoise_postprocessing_revai(BrownNoise *self) { POST_PROCESSING_REVAI };
+static void BrownNoise_postprocessing_revaa(BrownNoise *self) { POST_PROCESSING_REVAA };
+static void BrownNoise_postprocessing_revareva(BrownNoise *self) { POST_PROCESSING_REVAREVA };
+
+static void
+BrownNoise_setProcMode(BrownNoise *self)
+{
+    int muladdmode;
+    muladdmode = self->modebuffer[0] + self->modebuffer[1] * 10;
+    
+	switch (muladdmode) {
+        case 0:        
+            self->muladd_func_ptr = BrownNoise_postprocessing_ii;
+            break;
+        case 1:    
+            self->muladd_func_ptr = BrownNoise_postprocessing_ai;
+            break;
+        case 2:    
+            self->muladd_func_ptr = BrownNoise_postprocessing_revai;
+            break;
+        case 10:        
+            self->muladd_func_ptr = BrownNoise_postprocessing_ia;
+            break;
+        case 11:    
+            self->muladd_func_ptr = BrownNoise_postprocessing_aa;
+            break;
+        case 12:    
+            self->muladd_func_ptr = BrownNoise_postprocessing_revaa;
+            break;
+        case 20:        
+            self->muladd_func_ptr = BrownNoise_postprocessing_ireva;
+            break;
+        case 21:    
+            self->muladd_func_ptr = BrownNoise_postprocessing_areva;
+            break;
+        case 22:    
+            self->muladd_func_ptr = BrownNoise_postprocessing_revareva;
+            break;
+    }
+}
+
+static void
+BrownNoise_compute_next_data_frame(BrownNoise *self)
+{
+    BrownNoise_generate(self); 
+    (*self->muladd_func_ptr)(self);
+    Stream_setData(self->stream, self->data);
+}
+
+static int
+BrownNoise_traverse(BrownNoise *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    return 0;
+}
+
+static int 
+BrownNoise_clear(BrownNoise *self)
+{
+    pyo_CLEAR
+    return 0;
+}
+
+static void
+BrownNoise_dealloc(BrownNoise* self)
+{
+    free(self->data);
+    BrownNoise_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject * BrownNoise_deleteStream(BrownNoise *self) { DELETE_STREAM };
+
+static PyObject *
+BrownNoise_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    BrownNoise *self;
+    self = (BrownNoise *)type->tp_alloc(type, 0);
+    
+	self->modebuffer[0] = 0;
+	self->modebuffer[1] = 0;
+    self->y1 = self->c1 = self->c2 = 0.0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, BrownNoise_compute_next_data_frame);
+    self->mode_func_ptr = BrownNoise_setProcMode;
+    
+    return (PyObject *)self;
+}
+
+static int
+BrownNoise_init(BrownNoise *self, PyObject *args, PyObject *kwds)
+{
+    MYFLT b;
+    PyObject *multmp=NULL, *addtmp=NULL;
+    
+    static char *kwlist[] = {"mul", "add", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, "|OO", kwlist, &multmp, &addtmp))
+        return -1; 
+    
+    if (multmp) {
+        PyObject_CallMethod((PyObject *)self, "setMul", "O", multmp);
+    }
+    
+    if (addtmp) {
+        PyObject_CallMethod((PyObject *)self, "setAdd", "O", addtmp);
+    }
+    
+    Py_INCREF(self->stream);
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+
+    b = 2.0 - MYCOS(TWOPI * 20.0 / self->sr);
+    self->c2 = (b - MYSQRT(b * b - 1.0));
+    self->c1 = 1.0 - self->c2;
+    
+    (*self->mode_func_ptr)(self);
+    
+    srand((unsigned)(time(0)));
+    
+    Py_INCREF(self);
+    return 0;
+}
+
+static PyObject * BrownNoise_getServer(BrownNoise* self) { GET_SERVER };
+static PyObject * BrownNoise_getStream(BrownNoise* self) { GET_STREAM };
+static PyObject * BrownNoise_setMul(BrownNoise *self, PyObject *arg) { SET_MUL };	
+static PyObject * BrownNoise_setAdd(BrownNoise *self, PyObject *arg) { SET_ADD };	
+static PyObject * BrownNoise_setSub(BrownNoise *self, PyObject *arg) { SET_SUB };	
+static PyObject * BrownNoise_setDiv(BrownNoise *self, PyObject *arg) { SET_DIV };	
+
+static PyObject * BrownNoise_play(BrownNoise *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * BrownNoise_out(BrownNoise *self, PyObject *args, PyObject *kwds) { OUT };
+static PyObject * BrownNoise_stop(BrownNoise *self) { STOP };
+
+static PyObject * BrownNoise_multiply(BrownNoise *self, PyObject *arg) { MULTIPLY };
+static PyObject * BrownNoise_inplace_multiply(BrownNoise *self, PyObject *arg) { INPLACE_MULTIPLY };
+static PyObject * BrownNoise_add(BrownNoise *self, PyObject *arg) { ADD };
+static PyObject * BrownNoise_inplace_add(BrownNoise *self, PyObject *arg) { INPLACE_ADD };
+static PyObject * BrownNoise_sub(BrownNoise *self, PyObject *arg) { SUB };
+static PyObject * BrownNoise_inplace_sub(BrownNoise *self, PyObject *arg) { INPLACE_SUB };
+static PyObject * BrownNoise_div(BrownNoise *self, PyObject *arg) { DIV };
+static PyObject * BrownNoise_inplace_div(BrownNoise *self, PyObject *arg) { INPLACE_DIV };
+
+static PyMemberDef BrownNoise_members[] = {
+    {"server", T_OBJECT_EX, offsetof(BrownNoise, server), 0, "Pyo server."},
+    {"stream", T_OBJECT_EX, offsetof(BrownNoise, stream), 0, "Stream object."},
+    {"mul", T_OBJECT_EX, offsetof(BrownNoise, mul), 0, "Mul factor."},
+    {"add", T_OBJECT_EX, offsetof(BrownNoise, add), 0, "Add factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyMethodDef BrownNoise_methods[] = {
+    {"getServer", (PyCFunction)BrownNoise_getServer, METH_NOARGS, "Returns server object."},
+    {"_getStream", (PyCFunction)BrownNoise_getStream, METH_NOARGS, "Returns stream object."},
+    {"deleteStream", (PyCFunction)BrownNoise_deleteStream, METH_NOARGS, "Remove stream from server and delete the object."},
+    {"play", (PyCFunction)BrownNoise_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+    {"out", (PyCFunction)BrownNoise_out, METH_VARARGS|METH_KEYWORDS, "Starts computing and sends sound to soundcard channel speficied by argument."},
+    {"stop", (PyCFunction)BrownNoise_stop, METH_NOARGS, "Stops computing."},
+    {"setMul", (PyCFunction)BrownNoise_setMul, METH_O, "Sets BrownNoise mul factor."},
+    {"setAdd", (PyCFunction)BrownNoise_setAdd, METH_O, "Sets BrownNoise add factor."},
+    {"setSub", (PyCFunction)BrownNoise_setSub, METH_O, "Sets inverse add factor."},
+    {"setDiv", (PyCFunction)BrownNoise_setDiv, METH_O, "Sets inverse mul factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyNumberMethods BrownNoise_as_number = {
+    (binaryfunc)BrownNoise_add,                      /*nb_add*/
+    (binaryfunc)BrownNoise_sub,                 /*nb_subtract*/
+    (binaryfunc)BrownNoise_multiply,                 /*nb_multiply*/
+    (binaryfunc)BrownNoise_div,                   /*nb_divide*/
+    0,                /*nb_remainder*/
+    0,                   /*nb_divmod*/
+    0,                   /*nb_power*/
+    0,                  /*nb_neg*/
+    0,                /*nb_pos*/
+    0,                  /*(unaryfunc)array_abs,*/
+    0,                    /*nb_nonzero*/
+    0,                    /*nb_invert*/
+    0,               /*nb_lshift*/
+    0,              /*nb_rshift*/
+    0,              /*nb_and*/
+    0,              /*nb_xor*/
+    0,               /*nb_or*/
+    0,                                          /*nb_coerce*/
+    0,                       /*nb_int*/
+    0,                      /*nb_long*/
+    0,                     /*nb_float*/
+    0,                       /*nb_oct*/
+    0,                       /*nb_hex*/
+    (binaryfunc)BrownNoise_inplace_add,              /*inplace_add*/
+    (binaryfunc)BrownNoise_inplace_sub,         /*inplace_subtract*/
+    (binaryfunc)BrownNoise_inplace_multiply,         /*inplace_multiply*/
+    (binaryfunc)BrownNoise_inplace_div,           /*inplace_divide*/
+    0,        /*inplace_remainder*/
+    0,           /*inplace_power*/
+    0,       /*inplace_lshift*/
+    0,      /*inplace_rshift*/
+    0,      /*inplace_and*/
+    0,      /*inplace_xor*/
+    0,       /*inplace_or*/
+    0,             /*nb_floor_divide*/
+    0,              /*nb_true_divide*/
+    0,     /*nb_inplace_floor_divide*/
+    0,      /*nb_inplace_true_divide*/
+    0,                     /* nb_index */
+};
+
+PyTypeObject BrownNoiseType = {
+    PyObject_HEAD_INIT(NULL)
+    0,                         /*ob_size*/
+    "_pyo.BrownNoise_base",         /*tp_name*/
+    sizeof(BrownNoise),         /*tp_basicsize*/
+    0,                         /*tp_itemsize*/
+    (destructor)BrownNoise_dealloc, /*tp_dealloc*/
+    0,                         /*tp_print*/
+    0,                         /*tp_getattr*/
+    0,                         /*tp_setattr*/
+    0,                         /*tp_compare*/
+    0,                         /*tp_repr*/
+    &BrownNoise_as_number,             /*tp_as_number*/
+    0,                         /*tp_as_sequence*/
+    0,                         /*tp_as_mapping*/
+    0,                         /*tp_hash */
+    0,                         /*tp_call*/
+    0,                         /*tp_str*/
+    0,                         /*tp_getattro*/
+    0,                         /*tp_setattro*/
+    0,                         /*tp_as_buffer*/
+    Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+    "BrownNoise objects. Brown noise generator (-6dB/octave rolloff).",           /* tp_doc */
+    (traverseproc)BrownNoise_traverse,   /* tp_traverse */
+    (inquiry)BrownNoise_clear,           /* tp_clear */
+    0,		               /* tp_richcompare */
+    0,		               /* tp_weaklistoffset */
+    0,		               /* tp_iter */
+    0,		               /* tp_iternext */
+    BrownNoise_methods,             /* tp_methods */
+    BrownNoise_members,             /* tp_members */
+    0,                      /* tp_getset */
+    0,                         /* tp_base */
+    0,                         /* tp_dict */
+    0,                         /* tp_descr_get */
+    0,                         /* tp_descr_set */
+    0,                         /* tp_dictoffset */
+    (initproc)BrownNoise_init,      /* tp_init */
+    0,                         /* tp_alloc */
+    BrownNoise_new,                 /* tp_new */
+};
+
